--- a/online-shop(views)/package.json
+++ b/online-shop(views)/package.json
@@ -10,9 +10,8 @@
   "author": "Ander",
   "license": "ISC",
   "dependencies": {
-    "css-loader": "^2.1.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "style-loader": "^0.23.1",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14"
