--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "mysql2": "^1.6.4",
     "nodemon": "^1.18.9"
   }
 }
